<resources>
    <string name="app_name">Ribbit</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">E-mail</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="sign_up_button_label">Sign Up</string>
</resources>
